<resources>
    //IDs for game service
    <string name="achievement_newbie">CgkI-tebgKcNEAIQBA</string>
    <string name="achievement_good_player">CgkI-tebgKcNEAIQBQ</string>
    <string name="achievement_beginer">CgkI-tebgKcNEAIQBg</string>
    <string name="achievement_gamer">CgkI-tebgKcNEAIQBw</string>
    <string name="achievement_friendly_gamer">CgkI-tebgKcNEAIQCA</string>
    <string name="leader_board_id">CgkI-tebgKcNEAIQAw</string>





    <string name="app_name">Tic Tac Toe</string>
    <string name="settings_label">Settings</string>


    <!--Main Screen Buttons text-->
    <string name="button_one_player_string">1 Player</string>
    <string name="button_two_player_string">2 Players</string>
    <string name="button_online_string">Play Online</string>
    <string name="button_about_screen">About</string>

    <!--Game Service String-->
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <!--Notification Message-->
    <string name="please_login_string">Please Log In</string>
    <string name="please_enable_network">Please Enable Networking</string>
    <string name="please_enable_network_and_login">Please Enable Networking and Log In</string>

    <!--Select Online Game-->
    <string name="quick_game_string">Quick Game</string>
    <string name="invite_friend_string">Invite Friend</string>
    <string name="chech_invte_string">Check Invite</string>

    <!--Select AI Level-->
    <string name="easy_level_string">Easy</string>
    <string name="medium_level_string">Medium</string>
    <string name="hard_level_string">Hard</string>

    <!--Main Menu-->
    <string name="main_menu_one_player">1 PLAYER</string>
    <string name="main_menu_two_player">2 PLAYERS</string>
    <string name="main_menu_play_online">PLAY ONLINE</string>
    <string name="main_menu_about">ABOUT</string>
    <string name="main_menu_leaderboard">LEADERBOARD</string>
    <string name="main_menu_achievements">ACHIEVEMENTS</string>
    <string name="main_menu_settings">SETTINGS</string>

    <!--Settings text-->
    <string name="settings_sound">Sound</string>
    <string name="settings_music">Music</string>
    <string name="settings_push">Push</string>
    <string name="settings_analytics">Google Analytics</string>
    <string name="settings_you_login_as_string">You login as:</string>

    <!--Game Screen Strings-->
    <string name="no_string">No</string>
    <string name="yes_string">Yes</string>
    <string name="back_string">Back</string>
    <string name="your_torn_string">Your Turn!</string>
    <string name="they_torn_string">Their Turn!</string>
    <string name="win_string">You Win!</string>
    <string name="lose_string">You Lose!</string>
    <string name="draw_game_string">Draw Game!</string>
    <string name="continue_string">Continue?</string>
    <string name="opponent_left_game_string">Opponent Left Game!</string>
    <string name="waiting_opponent_string">Waiting Opponent</string>

    <string name="player_string">Player</string>

    <!--Two Player Screen-->
    <string name="user_one_string">Player 1</string>
    <string name="user_two_string">Player 2</string>
    <string name="win_user_string">Win</string>

    <string name="about_app_string">
        X\\O is the next step of the classic tic tac toe game for Android. Get it now while it\'s free!\n
        This incredibly popular game is also known as Noughts and Crosses (Naughts and Crosses), TicTacToe, Tick tack toe, X and O (Xs and Os), OXO, Tic-tac-toe or Tit-tat-toe.\n
        In Tic Tac Toe, two players take turns marking the spaces in a 3x3 grid with X and O marks. The player who succeeds in placing three respective marks in a vertical, horizontal or diagonal row wins the game.\n
        You can play with your friends, invite them to the game or challenge random players detect your ability and power and be one of top players in the world. Also you can play with phone, which have 2 levels :easy and hard. You can play with your friends on the same device.\n
        Stop wasting paper. Download this game now and play Tic Tac Toe on your Android device for free!\n
        X\\O is the best free game for kids, boys and girls. Fun for adults too! Also known as: noughts nad crosses, linea, raya, cero, x\'s and o\'s, pencil and paper games, free puzzle games. Common misspellings: tick tack toe, naughts and crosses, tic tak toe, tick tock toe, tic tac to, x, o, xx, oo, xxx, ooo, xo, xoxo, xoxoxo
    </string>

</resources>
