<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/button_one_player_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_one_player_string"/>
    <Button
        android:id="@+id/button_two_player_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_two_player_string"/>
    <Button
        android:id="@+id/button_online_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_online_string"/>
    <Button
        android:id="@+id/button_about_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_about_screen"/>
</LinearLayout>