<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg">

    <Button
        android:id="@+id/easy_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_level_string"
        android:background="@drawable/cell_music_bg"
        android:textSize="25dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/medium_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_level_string"
        android:background="@drawable/cell_sound_bg"
        android:textSize="25dp"
        android:padding="10dp"
        android:visibility="gone"/>
    <Button
        android:id="@+id/hard_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_level_string"
        android:background="@drawable/cell_push_bg"
        android:textSize="25dp"
        android:padding="10dp"/>

</LinearLayout>