<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <CheckedTextView
            android:id="@+id/activity_preferences_sound"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/common_signin_btn_default_background"
            android:text="@string/settings_sound"
            android:checkMark="@drawable/selector_check_box_settings"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:padding="15dp" />

        <CheckedTextView
            android:id="@+id/activity_preferences_music"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/common_signin_btn_default_background"
            android:text="@string/settings_music"
            android:checkMark="@drawable/selector_check_box_settings"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/activity_preferences_sound"
            android:padding="15dp" />

        <CheckedTextView
            android:id="@+id/activity_preferences_push"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/common_signin_btn_default_background"
            android:text="@string/settings_push"
            android:checkMark="@drawable/selector_check_box_settings"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/activity_preferences_music"
            android:padding="15dp" />

        <CheckedTextView
            android:id="@+id/activity_preferences_analytics"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/common_signin_btn_default_background"
            android:text="@string/settings_analytics"
            android:checkMark="@drawable/selector_check_box_settings"
            android:gravity="center_vertical"
            android:textColor="@color/text_color"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/activity_preferences_push"
            android:padding="15dp" />

    </RelativeLayout>

</RelativeLayout>