<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:gravity="center"
        >
        <ImageView
            android:id="@+id/my_avatar_image_view_game_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            />
        <TextView
            android:id="@+id/timer_text_view_game_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/timer_bg"
            android:gravity="center"
            android:textSize="21sp"
            />
        <ImageView
            android:id="@+id/oponent_avatar_image_view_game_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:gravity="center">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#341806"
            android:gravity="center">
        <TextView
            android:id="@+id/user_name_text_view_game_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:singleLine="true"
            />
            <TextView
                android:id="@+id/user_signe_text_view_game_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26dp"
                android:layout_weight="4"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/count_bg"/>
            </RelativeLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#341806"
            android:gravity="center">
        <TextView
            android:id="@+id/oponent_name_text_view_game_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="21dp"
            android:singleLine="true"
            />
            <TextView
                android:id="@+id/oponent_signe_text_view_game_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26dp"
                android:layout_weight="4"
                />
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/you_win_bg"
        >
        <Button
            android:id="@+id/no_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textColor="#e6ad6f"
            android:text="@string/no_string"
            android:textSize="22sp"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/info_your_they_torn_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/your_torn_string"
                android:textStyle="bold"
                android:textColor="#fcdab7"
                android:gravity="center"
                android:textSize="23sp"
                />
            <TextView
                android:id="@+id/continue_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/continue_string"
                android:gravity="center"
                android:textSize="18sp"
                android:visibility="invisible"/>

            </LinearLayout>
        <Button
            android:id="@+id/yes_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:textStyle="bold"
            android:textColor="#e6ad6f"
            android:text="@string/yes_string"
            android:textSize="22sp"
            android:visibility="invisible"/>
        </LinearLayout>
    <RelativeLayout
        android:id="@+id/game_field_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center">
        <GridView
            android:id="@+id/game_xo_grid_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:numColumns="3"
            android:background="@drawable/field_bg">

            </GridView>
        <ImageView
            android:id="@+id/win_line_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <!--android:src="@drawable/line_vertical"-->
        </RelativeLayout>
</LinearLayout>